[metadata]
name            = Arbie
version         = 0.1.2
author          = Alexander Poole
author-email    = alex.o.poole@gmail.com
long-description = file: README.md
long-description-content-type = text/markdown
requires-python = >=3.5
license = MIT
include_package_data=True

[flake8]
exclude = .git,__pycache__,build,dist
max-complexity = 10
max-line-length = 127
max-returns = 2
max-arguments = 3
ignore = D102,D103,D107,DAR101,DAR201,WPS412,WPS305,WPS111,WPS211,WPS214,WPS110,D105,D101,WPS212,WPS318,WPS319,S101
per-file-ignores =
    tests/unit/Contracts/uniswap_test.py: WPS202,WPS442
    tests/unit/Contracts/balancer_test.py: WPS202,WPS442

[tool:pytest]
junit_family=xunit2
