[metadata]
name            = Arbie
version         = 0.2.0
author          = Alexander Poole
author-email    = alex.o.poole@gmail.com
long-description = file: README.md
long-description-content-type = text/markdown
requires-python = >=3.5
license = MIT
include_package_data=True

[flake8]
exclude = .git,__pycache__,build,dist
max-complexity = 10
max-line-length = 127
max-returns = 2
max-arguments = 3
ignore = D102,D103,D107,DAR101,DAR201,WPS412,WPS305,WPS111,WPS211,WPS214,WPS110,D105,D101,WPS212,WPS318,WPS319,S101,WPS337,W503,W504,WPS529
per-file-ignores =
    tests/system/Contracts/uniswap_test.py: WPS202,WPS442
    tests/system/Contracts/balancer_test.py: WPS202,WPS442
    tests/system/Contracts/token_test.py: WPS432,WPS442
    tests/system/conftest.py: WPS432,WPS202,WPS442
    tests/unit/conftest.py: WPS432,WPS202,WPS442,WPS317
    tests/unit/token_test.py: WPS432,WPS609
    tests/unit/Variables/graph_test.py: WPS432, WPS317, WPS345, WPS442
    tests/unit/Variables/pool_test.py: WPS432, WPS442
    tests/unit/Actions/path_finder_test.py: WPS432, WPS442
    tests/unit/Actions/arbitrage_test.py: WPS432
    Arbie/Variables/graph.py: WPS220

[tool:pytest]
junit_family=xunit2
