[metadata]
name            = Arbie
version         = attr: Arbie.__version__
author          = Alexander Poole
author-email    = alex.o.poole@gmail.com
long-description = file: README.md
long-description-content-type = text/markdown
requires-python = >=3.5
license = MIT
include_package_data=True

[semantic_release]
version_variable = Arbie/__init__.py:__version__
commit_subject = bump(version): Release v{version}

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88

[flake8]
exclude = .git,__pycache__,build,dist
max-complexity = 10
inline-quotes = "
max-line-length = 127
max-returns = 2
max-arguments = 3
ignore = D102,D103,D107,DAR101,DAR201,WPS412,WPS305,WPS111,WPS211,WPS214,WPS110,D105,D101,WPS212,WPS318,WPS319,S101,WPS337,W503,W504,WPS529,RST301,RST201,C812,WPS355,WPS237,WPS615,WPS462
per-file-ignores =
    Arbie/Actions/pool_finder.py: WPS232, WPS231
    Arbie/Actions/redis_state.py: WPS226
    Arbie/Variables/graph.py: WPS220
    Arbie/__main__.py: WPS323
    tests/system/Actions/action_tree_test.py: WPS432,WPS442
    tests/system/Actions/conftest.py: WPS442
    tests/system/Actions/pool_updater_test.py: WPS442
    tests/system/Actions/redis_state_test.py: WPS428, WPS442
    tests/system/Actions/trader_test.py: WPS442, WPS432
    tests/system/Contracts/balancer_test.py: WPS202,WPS442
    tests/system/Contracts/token_test.py: WPS432,WPS442
    tests/system/Contracts/uniswap_router_test.py: WPS432
    tests/system/Contracts/uniswap_test.py: WPS202,WPS442
    tests/system/app_test.py: WPS442, WPS432, E800, WPS226, WPS218
    tests/system/conftest.py: WPS432,WPS202,WPS442
    tests/unit/Actions/action_test.py: WPS432, WPS442, WPS226, WPS202
    tests/unit/Actions/arbitrage_test.py: WPS432, WPS442
    tests/unit/Actions/conftest.py: WPS442
    tests/unit/Actions/path_finder_test.py: WPS432, WPS442
    tests/unit/Actions/redis_state_test.py: WPS428, WPS432
    tests/unit/Actions/trader_test.py: WPS432
    tests/unit/Services/coingecko_test.py: WPS226, WPS114, WPS442
    tests/unit/Variables/graph_test.py: WPS432, WPS317, WPS345, WPS442
    tests/unit/Variables/pool_test.py: WPS432, WPS442
    tests/unit/conftest.py: WPS432,WPS202,WPS442,WPS317,WPS221
    tests/unit/main_test.py: WPS442
    tests/unit/settings_parser_test.py: WPS442
    tests/unit/token_test.py: WPS432,WPS609

extend-ignore = E203, W503

[tool:pytest]
junit_family=xunit2
